# smh

./: CHANGELOG.md  LICENSE  README.md  TODO.txt  smh  smh.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: package.cache  smh-0.1.0.0-inplace-lib.conf
src/: Actions.hs  Common.hs  Focusers.hs  Mappings.hs  Parsers.hs
test/: Main.hs  input.txt  test-cases.txt
