cabal-version:      3.0
name:               smh
version:            0.1.0.0
synopsis:           String manipulation tool written in haskell
-- description:
license:            MIT
license-file:       LICENSE
author:             dani-rybe
maintainer:         danilrybakov249@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable smh
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      megaparsec,
                      text,
                      lib
    hs-source-dirs:   app
    default-language: Haskell2010

library lib
    exposed-modules:  Actions,
                      Common,
                      Focusers,
                      Mappings,
                      Parsers
    build-depends:    base ^>=4.17.2.1,
                      megaparsec,
                      lens,
                      scientific,
                      text,
                      array,
                      extra,
                      loop
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite unit-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base ^>=4.17.2.1,
                      tasty,
                      tasty-hunit,
                      process,
                      extra,
                      lib,
                      scientific,
                      text
    default-language: Haskell2010
