cabal-version:      3.0
name:               smh
version:            0.2.1
synopsis:           String manipulation tool written in haskell
description:        String manipulation CLI tool based on optics
category:           CLI Tool
license:            MIT
license-file:       LICENSE
author:             dani-rybe
maintainer:         danilrybakov249@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
source-repository head
    type:         git
    location:     https://github.com/DanRyba253/smh.git

common warnings
    ghc-options: -Wall

executable smh
    import:           warnings
    main-is:          Main.hs
    other-modules:    Paths_smh
    autogen-modules:  Paths_smh
    build-depends:    base >= 4.17 && < 4.20,
                      megaparsec >= 9.6.1 && < 9.7,
                      text >= 2.0.2 && < 2.2,
                      lib
    hs-source-dirs:   app
    default-language: Haskell2010

library lib
    exposed-modules:  Actions,
                      Common,
                      Focusers,
                      Mappings,
                      Parsers
    build-depends:    base >= 4.17 && < 4.20,
                      megaparsec >= 9.6.1 && < 9.7,
                      lens >= 5.2.3 && < 5.3,
                      text >= 2.0.2 && < 2.2,
                      array >= 0.5.4 && < 0.6,
                      extra >= 1.7.14 && < 1.8,
                      regex-pcre-builtin >= 0.95.2 && < 0.96,
                      loop >= 0.3.0 && < 0.4,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite unit-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base >= 4.17 && < 4.20,
                      tasty,
                      tasty-hunit,
                      process,
                      extra >= 1.7.14 && < 1.8,
                      lib,
                      text >= 2.0.2 && < 2.2
    default-language: Haskell2010

